Fix the alignment of the previous pagination link.
Looks like Bootstrap changed some default margins, we don't have to fix them anymore.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,10 +136,6 @@ abbr[data-original-title] {
 	display: none;
 }
 
-.pagination > [class*="span"]:first-child {
-	margin-left: 0;
-}
-
 .pagination a,
 .pagination p {
 	color: #262626;
